--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TAR TAR UNIVERSE</title>
+    <title>IT private Chatting application- 2026</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <style>
         /* General Styles */
@@ -233,7 +233,7 @@
     </div>
 
     <div id="chat-container" style="display:none;">
-        <div id="header">TAR TAR Universe</div>
+        <div id="header">Private Chat application - IT 2026</div>
         <div id="messages"></div>
         <div class="typing-indicator" id="typing-indicator"> Some TAR TAR is coming ....typing...</div>
 
