--- a/templates/index.html
+++ b/templates/index.html
@@ -228,8 +228,8 @@
     <!-- User Prompt -->
     <div id="user-prompt">
         <h2>Who are you?</h2>
-        <button onclick="chooseUser('Adisi')">Adisi</button>
-        <button onclick="chooseUser('Kishan')">Kishan</button>
+        <button onclick="chooseUser('Adisi')">faculty</button>
+        <button onclick="chooseUser('Kishan')">Atharva</button>
     </div>
 
     <div id="chat-container" style="display:none;">
