--- a/templates/index.html
+++ b/templates/index.html
@@ -301,9 +301,9 @@
             messageDiv.classList.add('message');
             if (data.user === 'Kishan') {
                 messageDiv.classList.add('my-message');
-                messageDiv.innerHTML = `<img src="https://i.ibb.co/fG9mn9Z/Kishan.jpg" alt="Kishan">${data.message} <span>${data.timestamp}</span>`;
+                messageDiv.innerHTML = `<img src="https://fdczvxmwwjwpwbeeqcth.supabase.co/storage/v1/object/public/images/23b9514f-f04e-4903-a496-8dd6e21ebc00/9fa331c2-1c95-49a8-b8ce-9e5010a03564.png" alt="Kishan">${data.message} <span>${data.timestamp}</span>`;
             } else {
-                messageDiv.innerHTML = `<img src="https://i.ibb.co/rdcpbkQ/adisi.jpg" alt="Adisi">${data.message} <span>${data.timestamp}</span>`;
+                messageDiv.innerHTML = `<img src="http://ttp.rgpv.ac.in/images/gallery/7_FDP_SI_at_RGPV%20%20Group_Photo.jpg" alt="Adisi">${data.message} <span>${data.timestamp}</span>`;
             }
             messagesContainer.appendChild(messageDiv);
             messagesContainer.scrollTop = messagesContainer.scrollHeight;
