--- a/templates/index.html
+++ b/templates/index.html
@@ -303,7 +303,7 @@
                 messageDiv.classList.add('my-message');
                 messageDiv.innerHTML = `<img src="https://fdczvxmwwjwpwbeeqcth.supabase.co/storage/v1/object/public/images/23b9514f-f04e-4903-a496-8dd6e21ebc00/9fa331c2-1c95-49a8-b8ce-9e5010a03564.png" alt="Kishan">${data.message} <span>${data.timestamp}</span>`;
             } else {
-                messageDiv.innerHTML = `<img src="http://ttp.rgpv.ac.in/images/gallery/7_FDP_SI_at_RGPV%20%20Group_Photo.jpg" alt="Adisi">${data.message} <span>${data.timestamp}</span>`;
+                messageDiv.innerHTML = `<img src="https://images.bhaskarassets.com/web2images/521/2024/02/19/ddafff47-498d-431d-a2ae-0a96fee372aa_1708343129331.jpg" alt="Adisi">${data.message} <span>${data.timestamp}</span>`;
             }
             messagesContainer.appendChild(messageDiv);
             messagesContainer.scrollTop = messagesContainer.scrollHeight;
